--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -40,6 +40,8 @@
     </ion-fab-button>
   </ion-fab>
 
+  <!--Img firebase-->
+
   <ion-fab vertical="bottom" horizontal="center" slot="fixed">
     <ion-fab-button>
       <ion-icon name="share"></ion-icon>
