--- a/src/app/pages/postagens/postagens.page.html
+++ b/src/app/pages/postagens/postagens.page.html
@@ -24,6 +24,19 @@
       <!--<ion-input required type="text" placeholder="titulo" [(ngModel)]="postagem.texto"></ion-input>-->
       <ion-textarea required type="text" placeholder="descricao" [(ngModel)]="postagem.texto"></ion-textarea>
     </ion-item>
+
+    <!--img-->
+    <ion-card class="ion-text-center" *ngIf="!isUploading && !isUploaded">
+      <ion-card-header>
+        <ion-card-title>Images p/ Upload</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-button color="success" shape="round" size="large">
+          <span>Image</span>
+          <input id="uploadBtn" type="file" class="upload" (change)="uploadFile($event.target.files)" />
+        </ion-button>
+      </ion-card-content>
+    </ion-card>
   </ion-list>
   <ion-button expand="full" (click)="savePostagem()">Salvar</ion-button>
 </ion-content>
